Fix overflow on SingleSignPage

--- a/src/SingleSignPage/SingleSignPage.module.css
+++ b/src/SingleSignPage/SingleSignPage.module.css
@@ -20,6 +20,7 @@
   padding: 2rem 0;
   min-height: 100%;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 
@@ -55,7 +56,13 @@
 }
 
 .next img, .previous img{
-  width: 3rem;
+  width: 2rem;
+}
+
+@media (min-width: 576px) {
+  .next img, .previous img{
+    width: 3rem;
+  }
 }
 
 
